// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Matches snapshot 1`] = `
<div>
  <div>
    <div
      class="count"
    >
      11
    </div>
  </div>
</div>
`;

exports[`Renders updates via props 1`] = `
<div>
  <div>
    <div
      class="count count-enter-done"
    >
      12
    </div>
  </div>
</div>
`;
